--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <title>Redirecting to GitHub Repo...</title>
     </head>
     <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://github.com/killsecurly/assets'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='https://github.com/killsecurly/assets'>link to the GitHub repo.</a>.
     </body>
 </html>
